Related: tdf#98419 set a min size on un-resizeable non-layout dialogs

(see also rhbz#1281906)

a min size equates to a size-request which is reliable under gtk3+wayland
as the dialog contents size.

a default size equates to the size of the dialog, which includes decorations
under wayland

(cherry picked from commit afeddaf7e0d11ad9b1df0c80bcc3f50caa87e21a)

Change-Id: I20baf00fb5952ab93628f4dd6891779ce682783c
Reviewed-on: https://gerrit.libreoffice.org/23121
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Eike Rathke <erack@redhat.com>