vcl/source/window/syswin.cxx
@@ -1128,6 +1128,10 @@ void SystemWindow::DoInitialLayout()
         mbIsCalculatingInitialLayoutSize = false;
         mbInitialLayoutDone = true;
     }
+    else if (!(GetStyle() & WB_SIZEABLE))
+    {
+        SetMinOutputSizePixel(GetSizePixel());
+    }
 }
 
 void SystemWindow::doDeferredInit(WinBits /*nBits*/)
